--- a/example.html
+++ b/example.html
@@ -1,4 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-	<h1>Here's Your Template</h1>	
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>One Click Politics Development Test</title>
+        <meta name="description" content="A quick mockup test for the fine folks at One Click Politics">
+        <meta name="viewport" content="width=device-width">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="//use.typekit.net/exx3smf.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <div class="wrapper messageForm">
+            <h1>Create A New Message</h1>
+            <form id="messageForm">
+                <div class="row clearfix">
+                    <div class="col-full">
+                        <div class="textContainer">
+                            <textarea id="messageText" class="messageText col-full" placeholder="Type your message here..PS(I scroll if my message exceeds my height)">Here is some scrollable text. It will just keep scrolling and scrolling and scrolling and scrolling and scrolling....I think you get the idea. In case you don't, it means that once the message length exceeds the height of the textarea, it will scroll like you've never seen anything scroll before. It will scroll like an old platform video game, until you reach the end. However instead of a princess to save or a star to collect, it will just be the end of the message. But that's exciting too right?</textarea>
+                            <label for="messageText">This is a Test Message</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <button type="button" id="fbLogin" class="btn fbLogin right">Sign With Facebook</button>
+                </div>
+                <div class="row clearfix">
+                    <div class="col-half">
+                        <div class="inputContainer">
+                            <input type="text" id="name" class="name" placeholder="Enter your name here" required>
+                            <label for="name">Name</label>
+                        </div>
+                    </div>
+                    <div class="col-half">
+                        <div class="inputContainer last">
+                            <input type="email" id="email" class="email" placeholder="Enter your email here" required>
+                            <label for="email">Email</label>
+                        </div>
+                    </div>
+                </div>
+                <input type="submit" id="submit" class="btn submit right" value="Submit">
+            </form>
+            <a href="http://oneclickpolitics.com"><img class="logo" src="images/ocp.png"></a>
+        </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+    </body>
 </html>
