--- a/example.html
+++ b/example.html
@@ -9,7 +9,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="//use.typekit.net/exx3smf.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="wrapper messageForm">
@@ -42,9 +42,9 @@
                 </div>
                 <input type="submit" id="submit" class="btn submit right" value="Submit">
             </form>
-            <a href="http://oneclickpolitics.com"><img class="logo" src="images/ocp.png"></a>
+            <a href="http://oneclickpolitics.com"><img class="logo" src="ocp.png"></a>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
