--- a/frame.html
+++ b/frame.html
@@ -9,7 +9,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="//use.typekit.net/exx3smf.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
