--- a/example.html
+++ b/example.html
@@ -44,7 +44,7 @@
             </form>
             <a href="http://oneclickpolitics.com"><img class="logo" src="ocp.png"></a>
         </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
